<resources>
    <string name="app_name">nantokaApp</string>
    <string name="action_reset">Reset</string>
    <string name="action_total">Total</string>
    <string name="action_timer">Timer</string>
    <string name="reset_toast">リセットしました"('ω'*)"</string>
    <string name="yen">円</string>
    <string name="this_month">今月、</string>
    <string name="last_month">先月（4月）、</string>
    <string name="init_fee">0円</string>
    <string name="ending_text">コインランドリーで使ったお(`・ω・´)</string>
    <string name="image_description">washing machine image</string>
    <string name="more_before_total">もっと前の合計</string>
    <string name="month_total">月の合計</string>
</resources>
