<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main"
    tools:context="com.example.aya.nantokaapp.MainActivity"
    android:weightSum="1"
    android:orientation="vertical"
    android:id="@+id/layout">

    <TextView
        android:text="@string/this_month"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        android:typeface="normal" />

    <TextView
        android:id="@+id/fee_text"
        android:text="@string/init_fee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="50dp"
        android:textColor="#333"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="30dp"
        android:typeface="normal" />

    <TextView
        android:text="@string/ending_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        android:typeface="normal" />

    <ImageView
        android:layout_width="203dp"
        android:layout_height="187dp"
        android:id="@+id/imageView"
        android:src="@drawable/washing_machine"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:layout_weight="0.06"
        android:contentDescription="@string/image_description" />

</LinearLayout>
